    + [ADB] Add "stretch".
  * data/cruft/rfc-whitelist:
    + [BR] Whitelist dual licensed vorbis rfc5215.
  * data/files/privacy-breaker-websites:
    + [BR] Add specific test for privacy breach with modernizr.js
      (Closes: #769679).
    + [BR] Add /logos/ to privacy-breach-logo.
    + [BR] Add specific test for libjs-openlayer.
    + [BR] Detect twitter logo.
  * data/spelling/corrections:
    + [BR] Add portugese||Portuguese.  (Closes:  #764015).
  * data/spelling/corrections-multiword:
    + [BR] Add "allow to" and "permit to".  (Closes: #756128).

  * debian/control:
    + [NT] Recommend dpkg (>= 1.17.14) for the --ctrl-tarfile
      option in dpkg-deb.  Lintian relies on it to support
      (u)deb files without a gzip compressed control.tar file.

  * frontend/lintian:
    + [NT] Produce a better error message for lintian detects
      that a check has a dependency on an unknown collection.

  * lib/Lintian/Command.pm:
    + [NT] Use croak() rather than L::Util's fail() on errors.
      The issues are generally not "internal errors".
  * lib/Lintian/Util.pm:
    + [NT] Prefer dpkg-deb --ctrl-tarfile to "ar p" when dpkg
      is recent enough.

  * profiles/ubuntu/main.profile:
    + [BR] Exclude no-human-maintainers (Closes: #769036).

 -- Niels Thykier <niels@thykier.net>  Sun, 09 Nov 2014 15:25:04 +0100

lintian (2.5.30) unstable; urgency=medium

  The "welcome Axel Beckert!" release.

  * Summary of tag changes:
    + Removed:
      - deprecated-kdelnk-file

  * checks/menu-format.{desc,pm}:
    + [NT] Retire check for "kdelnk" files.

  * collection/unpacked:
    + [NT] Correct handling of files with 2 or more consecutive
      backslashes.

  * debian/control:
    + [AB] Add a Homepage header pointing to https://lintian.debian.org/
  * debian/copyright:
    + [AB] Add myself to debian/copyright.
  * debian/rules:
    + [NT] Ensure that po4a/*.cfg are always up to date during releases
      builds.

  * helpers/coll/strings-helper: