@@ -17,8 +17,11 @@ privacy-breach-piwik                             ~~/piwik\.php\?
 privacy-breach-statistics-website                ~~^(?:(?:[^\./]+\.)?(?:count\.digitalpoint\.com|cruel-carlota\.pagodabox\.com|linkexchange\.com|nedstatbasic\.net|onestat\.com|sitemeter\.com|statcounter\.com|webstats\.motigo\.com)(?:/|\Z)|/count(?:er)?\.cgi\?[^/]*\Z)
 privacy-breach-w3c-valid-html                    ~~^(?:(?:[^\./]+\.)?w3.org/(?:icons/valid-|css-validator/images/)(?:[^/]+)?$|validator\.w3\.org(?:/|\Z))
 # already packaged under debian
-privacy-breach-may-use-debian-package-jquery    ~~(?:(?!doxygen.*)/jquery(?:-(?:\d\.?)+)?(?:\.min)?\.js\Z) ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-jquery package.
-privacy-breach-may-use-debian-package-jquery-ui ~~(?:/jquery-ui(?:(?:-(?:\d\.?)+)?(?:\.min)?\.js|\.css)\Z) ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-jquery-ui package.
-privacy-breach-may-use-debian-package-mathjax   ~~ /mathjax(?:\.min)?\.js(\Z|\?)                           ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-mathjax package.
-privacy-breach-may-use-debian-package-modernizr ~~ /modernizr(?:\.min)?\.js\Z                              ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-modernizr package.
-privacy-breach-may-use-debian-package-openlayer ~~ /openlayer(?:\.min)?\.js\Z                              ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-openlayer package.
+privacy-breach-may-use-debian-package-jquery        ~~(?:(?!doxygen.*)/jquery(?:-(?:\d\.?)+(b\d+)?)?(?:\.min)?\.js\Z)      ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-jquery package.
+privacy-breach-may-use-debian-package-jquery-flot   ~~(?:/jquery[\.-]flot(?:(?:-(?:\d\.?)+)?(?:\.min)?\.js|\.css)\Z)       ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-jquery-flot package.
+privacy-breach-may-use-debian-package-jquery-mobile ~~(?:/jquery[\.-]mobile(?:(?:-(?:\d\.?)+)?(?:\.min)?\.js|\.css)\Z)     ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-jquery-mobile package.
+privacy-breach-may-use-debian-package-jquery-ui     ~~(?:/jquery[\.-]ui(?:(?:-(?:\d\.?)+)?(?:\.min)?\.js|\.css)\Z)         ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-jquery-ui package.
+privacy-breach-may-use-debian-package-mathjax       ~~ /mathjax(?:\.min)?\.js(\Z|\?)                                       ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-mathjax package.
+privacy-breach-may-use-debian-package-modernizr     ~~ /modernizr(?:\.min)?\.js\Z                                          ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-modernizr package.
+privacy-breach-may-use-debian-package-openlayers    ~~ /openlayers(?:\.min)?\.js\Z                                         ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-openlayers package.
+privacy-breach-may-use-debian-package-openlayer     ~~ /prototype(?:\.min)?\.js\Z                                          ~~ privacy-breach-may-use-debian-package ~~ You may use libjs-prototype package.
