@@ -1,0 +1,11 @@
+<html>
+<head>
+
+</head>
+<body>
+<!-- not a problem -->
+<script type="text/javascript" src="http://localhost/test.html"></script>
+<!-- problem here -->
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.7b1.js"></script>
+</body>
+</html>
