@@ -1,0 +1,4 @@
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" src="http://openlayers.org/api/openlayers.js"></script>
+</html>
