@@ -31,8 +31,15 @@ E: files-privacybreach: privacy-breach-google-plus usr/share/files-privacy-breac
 E: files-privacybreach: privacy-breach-google-plus usr/share/files-privacy-breach/privacy-breach-google-plus/simplebutton.xml
 E: files-privacybreach: privacy-breach-logo usr/share/files-privacy-breach/privacy-breach-logo/logosourceforge.xml (http://sflogo.sourceforge.net/sflogo.php?group_id=2319&type=15)
 E: files-privacybreach: privacy-breach-logo usr/share/files-privacy-breach/privacy-breach-twitter/logotwitter.xml (https://g.twimg.com/twitter_logo_blue.png)
+E: files-privacybreach: privacy-breach-may-use-debian-package usr/share/files-privacy-breach/privacy-breach-may-use-debian-package/libjs-jquery-flot.html You may use libjs-jquery-flot package. (http://yandex.st/jquery/flot/0.7/jquery.flot.min.js)
+E: files-privacybreach: privacy-breach-may-use-debian-package usr/share/files-privacy-breach/privacy-breach-may-use-debian-package/libjs-jquery-mobile.html You may use libjs-jquery-mobile package. (http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js)
+E: files-privacybreach: privacy-breach-may-use-debian-package usr/share/files-privacy-breach/privacy-breach-may-use-debian-package/libjs-jquery-ui.html You may use libjs-jquery-ui package. (http://code.jquery.com/ui/1.2.0/jquery.ui-1.2.0.min.js)
 E: files-privacybreach: privacy-breach-may-use-debian-package usr/share/files-privacy-breach/privacy-breach-may-use-debian-package/libjs-jquery.html You may use libjs-jquery package. (https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js)
+E: files-privacybreach: privacy-breach-may-use-debian-package usr/share/files-privacy-breach/privacy-breach-may-use-debian-package/libjs-jquery_beta.html You may use libjs-jquery package. (http://code.jquery.com/jquery-1.7b1.js)
 E: files-privacybreach: privacy-breach-may-use-debian-package usr/share/files-privacy-breach/privacy-breach-may-use-debian-package/libjs-mathjax.html You may use libjs-mathjax package. (http://cdn.mathjax.org/mathjax/latest/mathjax.js?config=tex-ams-mml_htmlormml)
+E: files-privacybreach: privacy-breach-may-use-debian-package usr/share/files-privacy-breach/privacy-breach-may-use-debian-package/libjs-modernizer.html You may use libjs-modernizr package. (https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js)
+E: files-privacybreach: privacy-breach-may-use-debian-package usr/share/files-privacy-breach/privacy-breach-may-use-debian-package/libjs-openlayers.html You may use libjs-openlayers package. (http://openlayers.org/api/openlayers.js)
+E: files-privacybreach: privacy-breach-may-use-debian-package usr/share/files-privacy-breach/privacy-breach-may-use-debian-package/libjs-prototype.html You may use libjs-prototype package. (https://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js)
 E: files-privacybreach: privacy-breach-piwik usr/share/files-privacy-breach/privacy-breach-piwik/piwik.html
 E: files-privacybreach: privacy-breach-piwik usr/share/files-privacy-breach/privacy-breach-piwik/piwikvariant.html
 E: files-privacybreach: privacy-breach-statistics-website usr/share/files-privacy-breach/privacy-breach-statistics-website/statcounter.xml
